@@ -1,3 +1,5 @@
+* Add ceil and floor as uom rounding
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 * Add relate from Template to Products
